# boot-installer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  build-tauri.ps1  build_tauri.bat  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  test-installer.yml
backend/: kill_port.py  requirements.txt  run.py  run_server.py  weekly-review-backend-x86_64-pc-windows-msvc.spec  weekly_review_backend.spec
backend/app/: database.py  exceptions.py  main.py
baselines/: 20260315.json  parse_usage.py
e2e/: accessibility.spec.ts  app.spec.ts  bug-regression-check.spec.ts  cooking-session.spec.ts  cross-feature.spec.ts  dashboard-interactions.spec.ts  data-integrity.spec.ts  debug-app-state.spec.ts  finance-state-transitions.spec.ts  financial-tracking.spec.ts  helpers.ts  login-diag.spec.ts  meal-planning.spec.ts  post-edit-assertions.spec.ts  restore-transactions.mjs  security-checks.spec.ts  ship-verify-radial.spec.ts  ship-verify-smart.spec.ts  ship-verify-traditional.spec.ts  shopping-trip.spec.ts  snapshot-preflight.spec.ts  verify-bugs.mjs
scripts/: build-release.ps1  close-weekly-review.bat  dev-full.js  pre-build-check.ps1  pre-public-push-check.sh  security-scan.sh  update-desktop-shortcut.ps1
src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
(+758 files in other folders)
